--- a/assets/fonts/creepstercyrillic/creepstercyrillic.css
+++ b/assets/fonts/creepstercyrillic/creepstercyrillic.css
@@ -1,9 +1,9 @@
 @font-face {
-	font-family: 'CreepsterCyrillic';
-	src: url('../fonts/creepstercyrillic.eot'); /* IE 9 Compatibility Mode */
-	src: url('../fonts/creepstercyrillic.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-		url('../fonts/creepstercyrillic.woff2') format('woff2'), /* Super Modern Browsers */
-		url('../fonts/creepstercyrillic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-		url('../fonts/creepstercyrillic.ttf') format('truetype'), /* Safari, Android, iOS */
-		url('../fonts/creepstercyrillic.svg#creepstercyrillic') format('svg'); /* Chrome < 4, Legacy iOS */
+  font-family: 'CreepsterCyrillic';
+  src: url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.eot'); /* IE 9 Compatibility Mode */
+  src: url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+       url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+       url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://raw.githubusercontent.com/GriSav/gorkyquest-contacts-assets/b8ea5ad8947bed74999766e730ca6ec751d16d8e/assets/fonts/creepstercyrillic/fonts/creepstercyrillic.svg#creepstercyrillic') format('svg'); /* Chrome < 4, Legacy iOS */
 }
